--- a/manuscripts/child-documents/introduction.Rmd
+++ b/manuscripts/child-documents/introduction.Rmd
@@ -1,11 +1,8 @@
 # Introduction
 
-A central goal of modern neuroscience is to identify the neural causes of variation in human behaviour and cognition by characterizing how whole brain functional networks differ between and within individuals under a variety of conditions [@duboisadolphs_BuildingScienceIndividual_2016; @spornsetal_HumanConnectomeStructural_2005; @vanessenetal_HumanConnectomeProject_2012; see also, @saucematzel_CausesVariationLearning_2013]. The coupling of neural oscillations between spatially separate brain regions to form functional networks is considered a key mechanism by which the brain transmits and processes information [@buzsaki_RhythmsBrain_2011; @buzsakidraguhn_NeuronalOscillationsCortical_2004; @garrettetal_MomenttomomentBrainSignal_2013; @schnitzlergross_NormalPathologicalOscillatory_2005], and studying individual differences in the strength and pattern of connectivity in these functional networks is thought to be important for answering long-standing questions about behaviour and cognition in neuroscience [e.g., @viola_PlatonicBrainFacing_2020], psychology [e.g., @mcfarland_HowNeuroscienceCan_2017], and medicine [e.g., @grattonetal_DefiningIndividualSpecificFunctional_2020].[^1] Large and small scale efforts are now being made to characterize how whole brain functional networks differ between and within individuals [for examples of large scale efforts, see @alexanderetal_OpenResourceTransdiagnostic_2017; @vanessenetal_HumanConnectomeProject_2012; for examples of small scale efforts, see @gordonetal_PrecisionFunctionalMapping_2017; @poldracketal_LongtermNeuralPhysiological_2015], and it is anticipated that the results of these efforts will lead to more robust, replicable, and meaningful accounts of human behaviour and cognition, and their dysfunction [@elliottetal_WhatTestRetestReliability_2020; @fedorenko_EarlyOriginsGrowing_2021; @mareketal_ReproducibleBrainWideAssociation_2020; cf. @mehlerkording_LureMisleadingCausal_2020; cf. @slomanetal_CognitiveNeuroscienceMeets_2021]. Although currently in its infancy, such an approach is already providing complimentary information to the group-level approaches conventionally used in human neuroscience research because of its increased sensitivity and resolution [for a brief overview, see @fedorenko_EarlyOriginsGrowing_2021], and reliability and interpretability [@elliottetal_GeneralFunctionalConnectivity_2019; @grattonetal_FunctionalBrainNetworks_2018].
+A central goal of modern neuroscience is to identify the neural causes of variation in human behaviour and cognition by characterizing how whole brain functional networks differ between and within individuals under a variety of conditions [@duboisadolphs_BuildingScienceIndividual_2016; @spornsetal_HumanConnectomeStructural_2005; @vanessenetal_HumanConnectomeProject_2012; see also, @saucematzel_CausesVariationLearning_2013]. The coupling of neural oscillations between spatially separate brain regions to form functional networks is considered a key mechanism by which the brain transmits and processes information [@buzsaki_RhythmsBrain_2011; @buzsakidraguhn_NeuronalOscillationsCortical_2004; @garrettetal_MomenttomomentBrainSignal_2013; @schnitzlergross_NormalPathologicalOscillatory_2005], and studying individual differences in the strength and pattern of connectivity in these functional networks is thought to be important for answering long-standing questions about behaviour and cognition in neuroscience [e.g., @viola_PlatonicBrainFacing_2020], psychology [e.g., @mcfarland_HowNeuroscienceCan_2017], and medicine [e.g., @grattonetal_DefiningIndividualSpecificFunctional_2020]. Large and small scale efforts are now being made to characterize how whole brain functional networks differ between and within individuals [for examples of large scale efforts, see @alexanderetal_OpenResourceTransdiagnostic_2017; @vanessenetal_HumanConnectomeProject_2012; for examples of small scale efforts, see @gordonetal_PrecisionFunctionalMapping_2017; @poldracketal_LongtermNeuralPhysiological_2015], and it is anticipated that the results of these efforts will lead to more robust and replicable accounts of human behaviour, cognition, and their dysfunction [@elliottetal_WhatTestRetestReliability_2020; @fedorenko_EarlyOriginsGrowing_2021; @mareketal_ReproducibleBrainWideAssociation_2020; cf. @mehlerkording_LureMisleadingCausal_2020; cf. @slomanetal_CognitiveNeuroscienceMeets_2021].
 
-<!-- Maybe worth culling these lists a little - mention the most relevant rather than providing an exhaustive list? -->
-
-Given the promise of these efforts, it is unsurprising to see individual-level approaches being used to investigate how whole brain functional networks differ between and within individuals [@demuruetal_FunctionalEffectiveWhole_2017; @garrettetal_MomenttomomentBrainSignal_2013; @grattonetal_FunctionalBrainNetworks_2018; @laumannetal_StabilityBOLDFMRI_2017; @miranda-dominguezetal_ConnectotypingModelBased_2014; @mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021; @vandevilleetal_WhenMakesYou_2021; @zanescoetal_BetweenpersonCorrelatesTemporal_2020], behave across different timescales [@betzeletal_IndividualizedEventStructure_2021; @vandevilleetal_WhenMakesYou_2021], change across the lifespan [@chanetal_DecreasedSegregationBrain_2014; @chanetal_LongtermPrognosisEducational_2021; @dosenbachetal_PredictionIndividualBrain_2010], respond to changing conditions [@grattonetal_FunctionalBrainNetworks_2018; @mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021], predict differences in behaviour and cognition [@finnetal_FunctionalConnectomeFingerprinting_2015; @finnetal_CanBrainState_2017; @finnetal_IdiosynchronySharedResponses_2020; @finnbandettini_MoviewatchingOutperformsRest_2020],
-reflect dysfunction in behaviour and cognition [@kebetsetal_FrontolimbicNeuralVariability_2021], and reorganize with brain damage or disease [@baldassarreetal_BrainConnectivityNeurological_2016; @bassettbullmore_HumanBrainNetworks_2009; @carteretal_RestingInterhemisphericFunctional_2010; @laumannetal_BrainNetworkReorganisation_2021]. Nor is it surprising to see this knowledge applied in areas as diverse as personalized psychiatric treatment [@grattonetal_DefiningIndividualSpecificFunctional_2020; @scangosetal_ClosedloopNeuromodulationIndividual_2021], surgical planning [@ottenetal_MotorDeficitsCorrelate_2012; @tieetal_DefiningLanguageNetworks_2014; @wurnigetal_VariabilityClinicalFunctional_2013; @zhangetal_PreoperativeSensorimotorMapping_2009]; biometric security [@chanetal_ChallengesFuturePerspectives_2018], neurofeedback and brain-computer interfaces [@alkobyetal_CanWePredict_2018; @niv_ClinicalEfficacyPotential_2013; @scangosetal_ClosedloopNeuromodulationIndividual_2021], biomarker discovery [@liuetal_AssessingSpatiotemporalVariability_2019; @shenetal_SignalComplexityIndicators_2021; @sorrentinoetal_ClinicalConnectomeFingerprints_2020], and innovation or improvement of research methods [@conroyetal_IntersubjectAlignmentHuman_2013; @dadietal_BenchmarkingFunctionalConnectomebased_2019; @dadietal_FinegrainAtlasesFunctional_2020; @hackeretal_RestingStateNetwork_2013; @sabuncuetal_FunctionbasedIntersubjectAlignment_2010].
+Given the promise of these efforts, it is unsurprising to see individual-level approaches being used to investigate how whole brain functional networks change across the lifespan [@chanetal_LongtermPrognosisEducational_2021], respond to changing conditions [@grattonetal_FunctionalBrainNetworks_2018], predict differences in behaviour and cognition [@finnetal_FunctionalConnectomeFingerprinting_2015], reflect dysfunction in behaviour and cognition [@kebetsetal_FrontolimbicNeuralVariability_2021], and reorganize with brain damage or disease [@laumannetal_BrainNetworkReorganisation_2021]. Nor is it surprising to see this knowledge applied in areas as diverse as personalized psychiatric treatment [@grattonetal_DefiningIndividualSpecificFunctional_2020], surgical planning [@tieetal_DefiningLanguageNetworks_2014], deep brain stimulation [@scangosetal_ClosedloopNeuromodulationIndividual_2021], biometric security [@chanetal_ChallengesFuturePerspectives_2018], and biomarker discovery [@sorrentinoetal_ClinicalConnectomeFingerprints_2020].
 
 An important question underlying each of these investigations---both for its practical and theoretical consequences---is *how much* and *in which ways* whole brain functional networks differ between and within individuals. Much of the current progress in this area comes from the study of spontaneous fluctuations in blood oxygenation level dependent (BOLD) signals recorded with functional magnetic resonance imaging (fMRI), which provide an indirect measure of brain activity though the process of neurovascular coupling [@hillman_CouplingMechanismSignificance_2014]. Recent investigations using fMRI have revealed that although whole brain functional networks share common organizing principles between individuals, there is an approximately equal amount of unshared organization [@grattonetal_FunctionalBrainNetworks_2018]. These individual-specific deviations in whole brain functional network organization are commonly referred to as *network variants* [@seitzmanetal_TraitlikeVariantsHuman_2019]. Importantly, comparisons between individuals have found that individuals can be reliably separated into subgroups based on similar distributions of network variants, suggesting that network variants may be trait-like [@gordonetal_IndividualVariabilitySystemLevel_2017; @grattonetal_FunctionalBrainNetworks_2018; @seitzmanetal_TraitlikeVariantsHuman_2019]; and comparisons within individuals have indicated that network variants are highly stable, with their organization being influenced only moderately by behavioural or cognitive state and mildly by time [@grattonetal_FunctionalBrainNetworks_2018; @seitzmanetal_TraitlikeVariantsHuman_2019].
 
@@ -31,6 +28,6 @@ It is likely that the real data will be representative of more than one of these
 
 <!-- Footnotes start --------------------------------------------------------->
 
-[^1]: The power and relevance of individual-level approaches in human neuroscience research has been recognized since the start of human neuroimaging using electroencephalography [e.g., @adrianmathews_BergerRhythmPotential_1934; @berger_UberElektrenkephalogrammMenschen_1929; @henry_ElectroencephalographicIndividualDifferences_1941], positron emission tomography [e.g., @schlaugetal_IntersubjectVariabilityCerebral_1994], and functional magnetic resonance imaging [e.g., @rolandzilles_StructuralDivisionsFunctional_1998]. Despite this, human neuroscience research has historically dedicated itself to group-level approaches due to methodological limitations [e.g., @brettetal_ProblemFunctionalLocalization_2002], faulty assumptions about universality and generalizability [e.g., @caramazza_DrawingInferencesStructure_1986; @henson_WhatCanFunctional_2005; cf. @viola_PlatonicBrainFacing_2020], oversimplified conceptions of the role human neuroscience has in the study of behaviour and cognition [for discussions, see @pessoa_UnderstandingBrainNetworks_2014; @ruz_LetBrainExplain_2006; @mcfarland_HowNeuroscienceCan_2017], and sociological factors related to the origins of human neuroscience research [e.g., @posnerdigirolamo_CognitiveNeuroscienceOrigins_2000; @posneretal_CognitiveNeuroscienceDevelopmentsScience_1982].
+<!-- [^1]: The power and relevance of individual-level approaches in human neuroscience research has been recognized since the start of human neuroimaging using electroencephalography [e.g., @adrianmathews_BergerRhythmPotential_1934; @berger_UberElektrenkephalogrammMenschen_1929; @henry_ElectroencephalographicIndividualDifferences_1941], positron emission tomography [e.g., @schlaugetal_IntersubjectVariabilityCerebral_1994], and functional magnetic resonance imaging [e.g., @rolandzilles_StructuralDivisionsFunctional_1998]. Despite this, human neuroscience research has historically dedicated itself to group-level approaches due to methodological limitations [e.g., @brettetal_ProblemFunctionalLocalization_2002], faulty assumptions about universality and generalizability [e.g., @caramazza_DrawingInferencesStructure_1986; @henson_WhatCanFunctional_2005; cf. @viola_PlatonicBrainFacing_2020], oversimplified conceptions of the role human neuroscience has in the study of behaviour and cognition [for discussions, see @pessoa_UnderstandingBrainNetworks_2014; @ruz_LetBrainExplain_2006; @mcfarland_HowNeuroscienceCan_2017], and sociological factors related to the origins of human neuroscience research [e.g., @posnerdigirolamo_CognitiveNeuroscienceOrigins_2000; @posneretal_CognitiveNeuroscienceDevelopmentsScience_1982]. -->
 
 <!-- Footnotes end ----------------------------------------------------------->
