--- a/manuscripts/child-documents/methods.Rmd
+++ b/manuscripts/child-documents/methods.Rmd
@@ -15,11 +15,19 @@ tar_load(participant_descriptives_final)
 
 ### Electrophysiological Data Acquisition
 
-Electrophysiological data acquisition was completed in a dimly lit, radio frequency shielded, and sound attenuated chamber. During each session, an EasyCap electrolyte-gel-filled cap with 64 active electrodes positioned following the 10-10 system [@chatrianetal_TenPercentElectrode_1985; @chatrianetal_ModifiedNomenclature10_1988] was used to continuously record electrophysiological activity at the scalp (Brain Products GmbH, Gilching, Germany). Channel Cz was used as the reference electrode. A Brain Vision Solutions actiCHamp amplifier was used to amplify microvolt signals from the electrodes and transform them into digital format for storage and analysis (Brain Products GmbH, Gilching, Germany). All data were sampled at 500 Hz, and band limited with a built-in 0.05-100 Hz band-pass filter. All electrode impedances were below 17 kW at the start of recording. EEG recording lasted for a total of 80 minutes. We first recorded five minutes of eyes open and five minutes of eyes closed resting state date, with the order of these conditions counter-balanced across participants. This was followed by approximately 60 minutes of task state data recorded during performance of a lexical decision task [for a detailed description, see @cnuddeetal_IncreasedNeuralEfficiency_2021]. Finally, eyes open and eyes closed resting state data were recorded for five minutes each, again counter-balanced across participants.
+Electrophysiological data acquisition was completed in a dimly lit, radio frequency shielded, and sound attenuated chamber. During each session, an EasyCap <!--electrolyte-gel-filled-->cap with 64 active electrodes positioned following the 10-10 system [@chatrianetal_TenPercentElectrode_1985; @chatrianetal_ModifiedNomenclature10_1988] was used to continuously record electrophysiological activity at the scalp (Brain Products GmbH, Gilching, Germany). Channel Cz was used as the reference electrode. A Brain Vision Solutions actiCHamp amplifier was used to amplify microvolt signals from the electrodes and transform them into digital format for storage and analysis (Brain Products GmbH, Gilching, Germany). All data were sampled at 500 Hz, and band limited with a built-in 0.05-100 Hz band-pass filter. All electrode impedances were below 17 kW at the start of recording. EEG recording lasted for a total of 80 minutes. We first recorded five minutes of eyes open and five minutes of eyes closed resting state date, with the order of these conditions counter-balanced across participants. This was followed by approximately 60 minutes of task state data recorded during performance of a lexical decision task [for a detailed description, see @cnuddeetal_IncreasedNeuralEfficiency_2021]. Finally, eyes open and eyes closed resting state data were recorded for five minutes each, again counter-balanced across participants.
 
 Across all three sessions, we collected a total of 30 minutes eyes open resting state data (over 6 recordings) and 30 minutes eyes closed resting state data (over 6 recordings) from each participant. The time between the first and second session ranged from `r participant_descriptives_final$days_pre_to_post_min` to `r participant_descriptives_final$days_pre_to_post_max` days (M = `r papaja::apa_num(participant_descriptives_final$days_pre_to_post_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$days_pre_to_post_sd)`), and between the second and third session ranged from `r participant_descriptives_final$days_post_to_followup_min` to `r participant_descriptives_final$days_post_to_followup_max` days (M = `r papaja::apa_num(participant_descriptives_final$days_post_to_followup_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$days_post_to_followup_sd)`).
 
-### EEG preprocessing
+## Software and computational reproducibility
+
+```{r}
+r_version <- paste0(R.version$major, ".", R.version$minor)
+```
+
+<!--This project comes with a reproducible environment, using Docker <https://www.docker.com>, that includes everything needed to run its code or view its outputs.[^99] Instructions can be found in the study's GitHub or OSF repository.-->All computational steps were done using the open source programming language R [version `r r_version`, <https://www.R-project.org/>\; @R-base]. We maintained a reproducible workflow for the entire pipeline---from data cleaning to reporting---using the targets package [@R-targets], and managed R and Python dependencies using the renv package [@R-renv]. All EEG preprocessing and functional connectivity analysis was done using the open source Python package MNE-Python [version 2.2.0, <https://doi.org/10.5281/zenodo.4338426>\; @gramfortetal_MEGEEGData_2013], which was called from R using the reticulate package [@R-reticulate]. We estimated the RV coefficient using the FactoMineR package [@R-FactoMineR], and fit the mixed beta regression and contrasts using the glmmTMB [@R-glmmTMB] and emmeans [@R-emmeans] packages, respectively. The DHARMa [@R-DHARMa] and performance [@R-performance] packages were used for model diagnostics. All data visualization was done with a combination of the ggplot2 [@R-ggplot2], ggdist [@R-ggdist], ggh4x [@R-ggh4x], ggnewscale [@R-ggnewscale], and patchwork [@R-patchwork] packages. Other computations were done using the tidyverse [@R-tidyverse] suite of packages. Finally, this manuscript itself was written in R Markdown [@R-rmarkdown] using the papaja package's APA template [@R-papaja], and all reported numbers and figures were printed using inline code to ensure their accuracy. A complete record of the R environment and packages used in this study can be found in Tables \@ref(tab:session-info-environment) and \@ref(tab:session-info-packages) in the appendix.
+
+## EEG preprocessing
 
 ```{r bads-descriptives}
 # Bad channels descriptive statistics
@@ -301,24 +309,16 @@ To explore how well the group-level model and contrasts represented individual d
 
 We use ridge plots to report the individual-level contrasts estimating the difference in functional connectome similarity within and between participants at various levels of the session and state predictors. To interpret these contrasts, we report 95% compatibility distributions, which are equivalent to classical confidence distributions [@schwederhjort_ConfidenceLikelihoodProbability_2016; @xiesingh_ConfidenceDistributionFrequentist_2013]. Like with a compatibility interval, a 95% compatibility distribution shows the effect sizes most compatible with our data, given the background model, and is a sample-dependent distribution representing compatibility intervals of all levels for a parameter [@xiesingh_ConfidenceDistributionFrequentist_2013]. We used scaled and shifted $t$ distributions as the sampling distribution for the individual-level contrasts, using the point estimate, standard error, and degrees of freedom as parameters for the distribution. The peak of the distribution corresponds to the point estimate, and changes in the density of the distribution correspond to differences in compatibility values have with our data. For ease of comparison between the group-level and individual-level contrasts, we use a gradient fill in each ridge that shows each compatible value's distance from the group-level point estimate for a given contrast, and plot the group-level contrast estimates as a grey interval in the background.
 
-## Data and code availability
+<!-- ## Data and code availability -->
 
-<!-- The authors do not have the license to make the data publicly available. Please contact the corresponding author (amitetkin@stanford.edu) to discuss data access requests. -->
+<!-- The authors do not have the license to make the data publicly available. Please contact the corresponding author (name@email.com) to discuss data access requests. -->
 
-The raw and preprocessed EEG recordings used in this study are not currently openly available. All other data and code used in this study is openly available, and can be accessed at the study's GitHub repository <https://github.com/mccarthy-m-g/mccarthy-20XX> or Open Science Framework (OSF) repository <https://osf.io/xztdk/> (DOI: <https://doi.org/10.5281/zenodo.6578410>). Specifically: All functional connectivity data is licensed under the Creative Commons CC0 1.0 Universal, and all code is licensed under the MIT License. A copy of these licences and their terms can be found in the study's GitHub or OSF repository.
-
-## Software and computational reproducibility
-
-```{r}
-r_version <- paste0(R.version$major, ".", R.version$minor)
-```
-
-This project comes with a reproducible environment, using Docker <https://www.docker.com>, that includes everything needed to run its code or view its outputs.[^99] Instructions can be found in the study's GitHub or OSF repository. All computational steps were done using the open source programming language R [version `r r_version`, <https://www.R-project.org/>\; @R-base]. We maintained a reproducible workflow for the entire pipeline---from data cleaning to reporting---using the targets package [@R-targets], and managed R and Python dependencies using the renv package [@R-renv]. All EEG preprocessing and functional connectivity analysis was done using the open source Python package MNE-Python [version 2.2.0, <https://doi.org/10.5281/zenodo.4338426>\; @gramfortetal_MEGEEGData_2013], which was called from R using the reticulate package [@R-reticulate]. We estimated the RV coefficient using the FactoMineR package [@R-FactoMineR], and fit the mixed beta regression and contrasts using the glmmTMB [@R-glmmTMB] and emmeans [@R-emmeans] packages, respectively. The DHARMa [@R-DHARMa] and performance [@R-performance] packages were used for model diagnostics. All data visualization was done with a combination of the ggplot2 [@R-ggplot2], ggdist [@R-ggdist], ggh4x [@R-ggh4x], ggnewscale [@R-ggnewscale], and patchwork [@R-patchwork] packages. Other computations were done using the tidyverse [@R-tidyverse] suite of packages. Finally, this manuscript itself was written in R Markdown [@R-rmarkdown] using the papaja package's APA template [@R-papaja]. A complete record of the R environment and packages used in this study can be found in Tables \@ref(tab:session-info-environment) and \@ref(tab:session-info-packages) in the appendix.
+<!-- The raw and preprocessed EEG recordings used in this study are not currently openly available. All other data and code used in this study is openly available, and can be accessed at the study's GitHub repository <https://github.com/mccarthy-m-g/mccarthy-20XX> or Open Science Framework (OSF) repository <https://osf.io/xztdk/> (DOI: <https://doi.org/10.5281/zenodo.6578410>). Specifically: All functional connectivity data is licensed under the Creative Commons CC0 1.0 Universal, and all code is licensed under the MIT License. A copy of these licences and their terms can be found in the study's GitHub or OSF repository. -->
 
 <!-- Footnotes start --------------------------------------------------------->
 
 [^2]: These values were obtained by back-transforming the Fisher-transformed Pearson correlation coefficients for the group and individual effects reported in Supplemental Figures 2D and 2E in @grattonetal_FunctionalBrainNetworks_2018, then taking their difference.
 
-[^99]: Author's note: We have not yet created the reproducible environment.
+<!-- [^99]: Author's note: We have not yet created the reproducible environment. -->
 
 <!-- Footnotes end ----------------------------------------------------------->
