--- a/manuscripts/child-documents/methods.Rmd
+++ b/manuscripts/child-documents/methods.Rmd
@@ -15,7 +15,7 @@ tar_load(participant_descriptives_final)
 
 ### Electrophysiological Data Acquisition
 
-Electrophysiological data acquisition was completed in a dimly lit, radio frequency shielded, and sound attenuated chamber. During each session, an EasyCap <!--electrolyte-gel-filled-->cap with 64 active electrodes positioned following the 10-10 system [@chatrianetal_TenPercentElectrode_1985; @chatrianetal_ModifiedNomenclature10_1988] was used to continuously record electrophysiological activity at the scalp (Brain Products GmbH, Gilching, Germany). Channel Cz was used as the reference electrode. A Brain Vision Solutions actiCHamp amplifier was used to amplify microvolt signals from the electrodes and transform them into digital format for storage and analysis (Brain Products GmbH, Gilching, Germany). All data were sampled at 500 Hz, and band limited with a built-in 0.05-100 Hz band-pass filter. All electrode impedances were below 17 kW at the start of recording. EEG recording lasted for a total of 80 minutes. We first recorded five minutes of eyes open and five minutes of eyes closed resting state date, with the order of these conditions counter-balanced across participants. This was followed by approximately 60 minutes of task state data recorded during performance of a lexical decision task [for a detailed description, see @cnuddeetal_IncreasedNeuralEfficiency_2021]. Finally, eyes open and eyes closed resting state data were recorded for five minutes each, again counter-balanced across participants.
+Electrophysiological data acquisition was completed in a dimly lit, radio frequency shielded, and sound attenuated chamber. During each session, an EasyCap with 64 gel-based active electrodes positioned following the 10-10 system [@chatrianetal_TenPercentElectrode_1985; @chatrianetal_ModifiedNomenclature10_1988] was used to continuously record electrophysiological activity at the scalp (Brain Products GmbH, Gilching, Germany). Channel Cz was used as the reference electrode. A Brain Vision Solutions actiCHamp amplifier was used to amplify microvolt signals from the electrodes and transform them into digital format for storage and analysis (Brain Products GmbH, Gilching, Germany). All data were sampled at 500 Hz, and band limited with a built-in 0.05-100 Hz band-pass filter. All electrode impedances were below 17 kW at the start of recording. EEG recording lasted for a total of 80 minutes. We first recorded five minutes of eyes open and five minutes of eyes closed resting state date, with the order of these conditions counter-balanced across participants. This was followed by approximately 60 minutes of task state data recorded during performance of a lexical decision task [for a detailed description, see @cnuddeetal_IncreasedNeuralEfficiency_2021]. Finally, eyes open and eyes closed resting state data were recorded for five minutes each, again counter-balanced across participants.
 
 Across all three sessions, we collected a total of 30 minutes eyes open resting state data (over 6 recordings) and 30 minutes eyes closed resting state data (over 6 recordings) from each participant. The time between the first and second session ranged from `r participant_descriptives_final$days_pre_to_post_min` to `r participant_descriptives_final$days_pre_to_post_max` days (M = `r papaja::apa_num(participant_descriptives_final$days_pre_to_post_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$days_pre_to_post_sd)`), and between the second and third session ranged from `r participant_descriptives_final$days_post_to_followup_min` to `r participant_descriptives_final$days_post_to_followup_max` days (M = `r papaja::apa_num(participant_descriptives_final$days_post_to_followup_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$days_post_to_followup_sd)`).
 
