--- a/manuscripts/child-documents/introduction.Rmd
+++ b/manuscripts/child-documents/introduction.Rmd
@@ -12,7 +12,7 @@ In order to observe network variants reliably, previous research has used highly
 
 A natural solution to this barrier is to explore the feasibility of lower cost neuroimaging modalities for studying network variants. Electroencephalography (EEG) offers one such solution. EEG directly measures the electrophysiological activity of neural populations in the cerebral cortex in real time [@cohen_AnalyzingNeuralTime_2014; @cohen_WhereDoesEEG_2017; @luck_IntroductionEventrelatedPotential_2014]. It allows us to directly probe the synchronization of neural oscillations in functional networks, bypassing the complexities of linking BOLD signals to the dynamics of underlying neural activity. It also allows us to measure neural oscillations at timescales much faster than the infraslow 0.1 Hz oscillations of BOLD signals, making it possible to test whether the organization of network variants is sensitive to timescales [cf., @mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021]. There is currently debate about whether functional network organization is sensitive to timescales [see @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. One view predicts frequency-specific functional specialization of networks, and is supported by findings that connectivity in different frequency bands has been linked to different neural processes [e.g., @sadaghianikleinschmidt_BrainNetworksAOscillations_2016] and is more prominent in different brain regions following a medial-to-lateral and posterior-to-anterior gradient of increasing frequency [@capillaetal_NaturalFrequenciesResting_2022]. The other view predicts that functional network organization is timescale-invariant, and is supported by computational models that suggest functional networks have a common organization across timescales when averaged over sufficiently long periods [@sadaghianiwirsich_IntrinsicConnectomeOrganization_2020].
 
-There are two disadvantages to EEG that may pose a challenge for identifying network variants. First, the effects of field spread and volume conduction in the head can cause multiple electrodes to record activity from the same underlying neural source [@nunezsrinivasan_ElectricFieldsBrain_2006; @schoffelengross_SourceConnectivityAnalysis_2009], resulting in spurious estimates of connectivity between regions in functional networks. This can be addressed either through source reconstruction methods, which attempt to unmix measured signals to estimate the location of the underlying neural sources; or by using connectivity metrics that account for the effects of field spread and volume conduction in the head, which reduce the possibility of spurious coupling between channels from influencing functional connectivity estimates [@bastosschoffelen_TutorialReviewFunctional_2016]. Second, EEG is generally limited to measuring cortical neural activity and has poor spatial resolution compared to fMRI. Despite these challenges, numerous studies have demonstrated that measures of electrophysiological connectivity show spatial similarity to the functional connectivity commonly observed with fMRI regardless of timescale [@danielarzate-menaetal_StationaryEEGPattern_2022; @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. Given this, network variants should also be identifiable with EEG. However, the vast majority of work using EEG to study whole brain functional networks focuses on group-level approaches, so the feasibility of using EEG to study network variants is largely unknown. 
+There are two disadvantages to EEG that may pose a challenge for identifying network variants. First, the effects of field spread and volume conduction in the head can cause multiple electrodes to record activity from the same underlying neural source [@nunezsrinivasan_ElectricFieldsBrain_2006; @schoffelengross_SourceConnectivityAnalysis_2009], resulting in spurious estimates of connectivity between regions in functional networks. This can be addressed either through source reconstruction methods, which attempt to unmix measured signals to estimate the location of the underlying neural sources; or by using connectivity metrics that account for the effects of field spread and volume conduction in the head, which reduce the possibility of spurious coupling between channels from influencing functional connectivity estimates [@bastosschoffelen_TutorialReviewFunctional_2016]. Second, EEG is generally limited to measuring cortical neural activity and has poor spatial resolution compared to fMRI. Despite these challenges, numerous studies have demonstrated that measures of electrophysiological connectivity show spatial similarity to the functional connectivity commonly observed with fMRI regardless of timescale [@danielarzate-menaetal_StationaryEEGPattern_2022; @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. Given this, network variants may also be identifiable with EEG. However, the vast majority of work using EEG to study whole brain functional networks focuses on group-level approaches, so the feasibility of using EEG to study network variants is largely unknown. 
 
 Here, we use EEG data previously collected by our lab as part of a larger study---containing a total of 30 minutes eyes open resting state data (over 6 recordings) and 30 minutes eyes closed resting state data (over 6 recordings) from each participant---to answer this question. First we create a functional connectome from each recording by estimating the phase and amplitude coupling between all pairs of EEG channels. Phase and amplitude coupling are thought to reflect different but related neurophysiological functions and it is common to use both measures so they can be compared [@engeletal_IntrinsicCouplingModes_2013; @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020; @wirsichetal_RelationshipEEGFMRI_2021]. Specifically, phase coupling is thought to regulate the integration and flow of cognitive contents on fast timescales, and amplitude coupling is thought to coordinate changes in (co)activation of brain areas on slow timescales [@engeletal_IntrinsicCouplingModes_2013]. Then we test for the presence of network variants by estimating how functional connectomes differ between and within individuals using measures of network similarity.
 
